nomeia pagina em arquivo html

--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
  <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Seleção de Músicas</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='script.js'></script>
  </html>
+ <div class="main">
  <div class="left">
     <img src="img/music-animate.svg" class="left-img" alt="music-animate-animação">
     </div>
 <form name="selectForm">
     <p>
-    <div class="right"></div>
-      <label for="tipoMusica"
-        >Escolha alguns tipos de música, em seguida, clique no botão
-        abaixo:</label
-      >
+    <div class="right">
+      <div class="card">    
+        <label for="tipoMusica"> Escolha alguns tipos de música, em seguida, clique no botão
+        abaixo:
+      </label>
+      </div>
       <select id="tipoMusica" name="tipoMusica" multiple="multiple">
         <option selected="selected">R&B</option>
         <option>Jazz</option>
