adiciona texto "Contador de Músicas"

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  </html>
  <div class="main">
  <div class="left">
+  <h1> Contador de Músicas</h1>
     <img src="img/music-animate.svg" class="left-img" alt="music-animate-animação">
     </div>
 <form name="selectForm">
